<resources>
    <string name="app_name">TicTacToe-Master</string>

    <string name="title_screen_text">TicTacToe\nMaster</string>
    <string name="twoPlayersOnePhone">1 vs 1 on one phone</string>
    <string name="twoPlayersTwoPhonesWiFi">1 vs 1 online</string>
    <string name="onePlayerOnePhone">play against bot</string>
    <string name="start_game">start game</string>
    <string name="currency">\uD83E\uDE99</string>
    <string name="select_theme">select</string>
    <string name="chosen_board_size">Chosen board size:</string>
    <string name="classic_or_point_game">Classic or point game?</string>
    <string name="classic_game">Classic</string>
    <string name="point_game">Point</string>
    <string name="chosen_win_condition">Chosen win condition:</string>
    <string name="classic_win_condition">Classic</string>
    <string name="mobius_strip_win_condition">Möbius Strip</string>
    <string name="number_of_points_to_win">Number of points to win:</string>
    <string name="player_o">Player O:</string>
    <string name="tie">Tie:</string>
    <string name="player_x">Player X:</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Log in</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_out">Sign out</string>
    <string name="already_account">Click here to log in if you already have an account</string>
    <string name="not_yet_account">Click here to sign in if you don\'t have an account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>