<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:constraint_referenced_tags="0dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/coinsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="monospace"
        android:text="0 coins"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/title_screen_text"
        android:textSize="34sp" />

    <Button
        android:id="@+id/onePhoneTwoPlayersBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/twoPlayersOnePhone" />

    <Button
        android:id="@+id/twoPhonesTwoPlayersWiFiBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/twoPlayersTwoPhonesWiFi" />

    <Button
        android:id="@+id/onePhoneOnePlayerBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/onePlayerOnePhone" />
</LinearLayout>