<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:constraint_referenced_tags="0dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/coins_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="0 coins"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/title_screen_text"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/light_green"
        android:textColorHint="@color/text_color"
        android:textColorLink="@color/forest_green" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/light_green"
        android:textColorHint="@color/text_color"
        android:textColorLink="@color/forest_green" />

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/not_yet_account_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_yet_account"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textAlignment="center"/>


</LinearLayout>