<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:constraint_referenced_tags="0dp"
    tools:context=".ChooseGameTypeActivity"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:theme="@style/Theme.TicTacToeMaster">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/coins_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="0 coins"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/account_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:gravity="end"
            android:text="@string/login" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title_screen_text"
        android:textSize="34sp" />

    <LinearLayout
        android:id="@+id/board_size_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chosen_board_size"
            android:textSize="20sp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/decrease_size_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/left_arrow" />

            <TextView
                android:id="@+id/sizeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3"
                android:gravity="center"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/increase_size_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/right_arrow" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/win_cond_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chosen_win_condition"
            android:textSize="20sp"
            android:padding="10dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:checked="true"
            android:id="@+id/chosen_win_cond_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:text="@string/classic_win_condition"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/classic_or_points_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/classic_or_point_game"
            android:textSize="20sp"
            android:padding="10dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:checked="true"
            android:id="@+id/chosen_game_type_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/classic_game"
            android:textColor="@color/text_color"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/points_to_win_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/points_to_win_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/number_of_points_to_win"
            android:textSize="20sp"
            android:padding="10dp"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/points_to_win_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="2"
            android:valueTo="9"/>
    </LinearLayout>

    <Button
        android:id="@+id/start_game_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_game"
        android:layout_marginTop="20dp"/>

</LinearLayout>