<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:constraint_referenced_tags="0dp"
    tools:context=".activity.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/dark_green"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/coins_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="0 coins"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/account_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:gravity="end"
            android:text="@string/login" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/title_screen_text"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/points_o_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:text="@string/player_o"/>

        <TextView
            android:id="@+id/points_tie_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:text="@string/tie"/>

        <TextView
            android:id="@+id/points_x_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="12sp"
            android:text="@string/player_x"/>

    </LinearLayout>

    <com.tictactoe_master.activity.ui.SquareLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/game_board_tl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center">
        </TableLayout>
    </com.tictactoe_master.activity.ui.SquareLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/turn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TURN: O" />

        <TextView
            android:id="@+id/playing_as_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text=""/>

    </LinearLayout>

    <Button
        android:id="@+id/next_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="NEXT"/>

    <TextView
        android:id="@+id/opponent_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>